--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "scripts": {
     "start": "node server.js"
   },
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "openai": "^3.2.1"
   }
 }
+
+
